<resources>
    <string name="app_name">Magikard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="NavDrawerHeader">Magikard</string>
    <string name="NavDrawerSub">Testing PTCG Decks</string>
    <string name="greeting">Welcome to Magikard!</string>
    <string name="newCard">New Card</string>
    <string name="openPokedex">Pokedex</string>
    <string name="newDeck">New Deck</string>
    <string name="openDecklists">Deck Lists</string>
    <string name="navDrawer1">Create</string>
    <string name="navDrawer2">View</string>
    <string name="newCardHeader">New Card</string>
    <string name="newPokemonCardHP">Hit Points</string>
    <string name="newCardName">Name</string>
    <string name="newPokemonCardType">Type</string>
    <string name="newPokemonCardSubmitButton">Submit</string>
    <string name="pokedexViewHeader">Pokedex</string>
    <string name="pokedexViewButton">View</string>
    <string name="pokedexEditButton">Edit</string>
    <string name="pokedexDeleteButton">Delete</string>
    <string name="pokedexViewInstructions">Tap a card to view its information and add it to a deck.</string>
    <string name="HP">HP</string>
    <string name="viewModeHint">\"Tap a card to view its information and add it to a deck.\"</string>
    <string name="editModeHint">\"Tap a card to change its information.\"</string>
    <string name="deleteModeHint">\"Tap the cards to remove them, hold DELETE to confirm.\"</string>
    <string name="dialogNewCard">What Type of Card?</string>
    <string name="newTrainerCardType">Type</string>
    <string name="newTrainerCardDesc">Description</string>
    <string name="newEnergyCardDesc">Description</string>
    <string name="dialogPokedexOpen">Open Pokedex entries for:</string>
    <string name="newDeckHeader">New Deck</string>
    <string name="newDeckListSubmitButton">Create</string>
    <string name="newDeckListFormat">Format</string>
    <string name="newDeckName">Name</string>
    <string name="deckListViewHeader">Decks</string>
    <string name="deckListViewInstructions">Tap a deck to view it\'s contents.</string>
    <string name="deckListViewButton">View</string>
    <string name="deckListEditButton">Edit</string>
    <string name="deckListDeleteButton">Delete</string>
    <string name="deckViewModeHint">Tap a deck to view it\'s contents.</string>
    <string name="deckEditModeHint">Tap a deck to edit it\'s information, tap view to edit it\'s contents.</string>
    <string name="deckDeleteModeHint">Tap a deck to select it. Hold DELETE to delete selected decks.</string>
    <string name="gettingStartedHint">Tap the drawer in the top left corner to get started!</string>
    <string name="contentViewModeHint">Tap on a card to view its information.</string>
    <string name="contentEditModeHint">Nothing to see here!</string>
    <string name="contentDeleteModeHint">Tap on a card to remove it from the deck, hold DELETE to confirm.</string>
    <string name="deckLibHeader">Decks</string>
    <string name="deckContentListViewInstructions">Tap a Card to View its Details</string>
    <string name="addButton">Add</string>
    <string name="backButton">Back</string>
    <string name="deckAddModeHint">\"Tap which deck you would like to add the card to.</string>
</resources>
