<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/deckLibHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textSize="@dimen/header_height"
        android:layout_weight="1"
        android:text="@string/deckLibHeader"/>

    <TextView
        android:id="@+id/deckListInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/deckListViewInstructions"
        android:textSize="@dimen/smallTextHeight"
        android:layout_weight="1"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#C0C0C0"/>

    <ListView
        android:id="@+id/deckListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:clickable="true"
        android:background="#FFF"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#C0C0C0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/deckListViewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deckListViewButton"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClickViewButton"/>

        <Button
            android:id="@+id/deckListEditButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deckListEditButton"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClickEditButton"/>

        <Button
            android:id="@+id/deckListDeleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deckListDeleteButton"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClickDeleteButton" />

    </LinearLayout>

</LinearLayout>