<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/deckName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/mediumTextHeight"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/deckFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/smallTextHeight"
            android:gravity="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/deckListInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/deckContentListViewInstructions"
        android:textSize="@dimen/smallTextHeight"
        android:layout_weight="1"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#C0C0C0"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="60"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pokemon"
                android:textSize="@dimen/header_height"
                android:background="#E0E0E0"
                />
            <LinearLayout
                android:id="@+id/pokemonListViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ListView
                     android:id="@+id/pokemonListView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trainer"
                android:textSize="@dimen/header_height"
                android:background="#E0E0E0"
                />
            <LinearLayout
                android:id="@+id/trainerListViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ListView
                    android:id="@+id/trainerListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Energy"
                android:textSize="@dimen/header_height"
                android:background="#E0E0E0"
                />
            <LinearLayout
                android:id="@+id/energyListViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ListView
                    android:id="@+id/energyListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#C0C0C0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/deckListViewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deckListViewButton"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClickViewButton"/>

        <Button
            android:id="@+id/deckListDeleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deckListDeleteButton"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClickDeleteButton" />

    </LinearLayout>

</LinearLayout>